dataset1235/2025-2/805158916/users/2584427029/executions/2118643220_4204267109.log
== SUBMISSION (2025-09-01 15:16:41)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float(input("digite a quantidade diaria de racao em gramas:"))

restante = peso-(5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:21:38)
-- CODE: 
PSR = float("Peso do saco da ração")
QQR = float("Quantidade diaria de ração")

QQR = PSR - (4* QPD)

print(round(QQR.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:22:13)
-- CODE: 
PSR = float("Peso do saco da ração")
QQR = float("Quantidade diária de ração")

QQR = PSR - ( 4* QPD )

print(round(QQR.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:16:08)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float((input"digite a quantidade diaria de racao em gramas:"))

restante = peso-( 5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:21:26)
-- CODE: 
PSR = float("Peso do saco da ração")
QQR = float("Quantidade diaria de ração")

QQR = PSR - (4* QPD)

print(round(QQR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:43:34)
-- CODE: 
PSR = float(input("Peso do saco da ração"))
QQR = float((input"Quantidade diária de ração"))

QQR = PSR - ( 4* QPD )

print(round(QQR.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:16:45)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float(input("digite a quantidade diaria de racao em gramas:"))

restante = peso-(5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:52:47)
-- CODE: 
PSR = float(input("Peso do saco da ração"))
QQR = float((input"Quantidade diária de ração"))

QQR = PSR - ( 5* QPD )

print(round(QQR .2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:43:08)
-- CODE: 
PSR = float(input("Peso do saco da ração"))
QQR = float((input"Quantidade diária de ração"))

QQR = PSR - ( 4* QPD )

print(round(QQR.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:15:46)
-- CODE: 
pesoeso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float((input"digite a quantidade diaria de racao em gramas:"))

restante = peso-( 5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diaria de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:46:26)
-- CODE: 
PSR = float(input("Peso do saco da ração"))
QQR = float((input"Quantidade diária de ração"))

QQR = PSR - ( 5* QPD )

print(round(QQR.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:15:32)
-- CODE: 
pesoeso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float((input"digite a quantidade diária de racao em gramas:"))

restante = peso-( 5*diaria )

print(round(restantes, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:16:42)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float(input("digite a quantidade diaria de racao em gramas:"))

restante = peso-(5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:52:10)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float(input("digite a quantidade diaria de racao em gramas:"))

restante = peso-(7*diaria )

print(round(restantes, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:15:21)
-- CODE: 
pesoeso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float((input"digite a quantidade diária de racao em gramas:"))

restante = peso-( 5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:21:27)
-- CODE: 
PSR = float("Peso do saco da ração")
QQR = float("Quantidade diaria de ração")

QQR = PSR - (4* QPD)

print(round(QQR,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PSR = float("Peso do saco da ração")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Peso do saco da ração'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:15:20)
-- CODE: 
pesoeso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float((input"digite a quantidade diária de racao em gramas:"))

restante = peso-( 5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:21:58)
-- CODE: 
PSR = float("Peso do saco da ração")
QQR = float("Quantidade diária de ração")

QQR = PSR - (4* QPD)

print(round(QQR.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:17:51)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float(input("digite a quantidade diaria de racao em gramas:"))

restante = peso-(7*diaria )

print(round(restantes, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 4))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:16:41)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float(input("digite a quantidade diaria de racao em gramas:"))

restante = peso-(5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:53:02)
-- CODE: 
PSR = float(input("Peso do saco da ração"))
QQR = float((input"Quantidade diária de ração"))

QQR = PSR - ( 5* QPD )

print(round(QQR .2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:16:40)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float(input("digite a quantidade diaria de racao em gramas:"))

restante = peso-(5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:14:36)
-- CODE: 
pesoeso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float((input"digite a quantidade diária de racao em gramas:"))

restante = peso - ( 5* Diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    diaria = float((input"digite a quantidade diária de racao em gramas:"))
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:46:24)
-- CODE: 
PSR = float(input("Peso do saco da ração"))
QQR = float((input"Quantidade diária de ração"))

QQR = PSR - ( 5* QPD )

print(round(QQR.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 2
    QQR = float((input"Quantidade diária de ração"))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:16:42)
-- CODE: 
peso = float(input("digite o peso do saco da racao em gramas:"))
diaria = float(input("digite a quantidade diaria de racao em gramas:"))

restante = peso-(5*diaria )

print(round(restantes, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(restantes, 3))
                ^^^^^^^^^
NameError: name 'restantes' is not defined. Did you mean: 'restante'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:21:37)
-- CODE: 
PSR = float("Peso do saco da ração")
QQR = float("Quantidade diaria de ração")

QQR = PSR - (4* QPD)

print(round(QQR.2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9084
29.06
---- correct output:
8880.58
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1353.92
73.14
---- correct output:
841.94
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
1000.3333
20.11
---- correct output:
859.5633
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1333.87
77.43
---- correct output:
791.86
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
2045.3
14.73
---- correct output:
1942.19
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
8000.3333
20.11
---- correct output:
7859.5633
-- ERROR:
File "XXXX", line 6
    print(round(QQR.2))
                ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
